0.3.1 Mar 2015
--------------
- renamed configuration applTo to apply_to
- renamed configuration files.defaultfile to server.default_path

0.3.0 - Feb 2015
----------------
Production ready application level proxy
- refactored filter system
- proxy requests with or without prefix based on path matching
- file serving based on path matching
- option to disable file or proxy server
- proxy response filter support
- custom filter plugin system

Filter configurations need to be updated!

0.2.5 - Oct 2014
----------------
- fixed scaffold

0.2.4 - Oct 2014
----------------
- changed readme to rst format

0.2.3 - Oct 2014
----------------
- added domain placeholder configuration option
- doc update

0.2.2 release - June 2014
-------------------------
Many bugfixes and improvements.

Sept. 2013
----------
First release.
